feat(开发环境): 完善初始化与项目管理规范
